# JonathanAPedroza.com

./: .gitignore  README.md  _quarto.yml  about.qmd  cv.qmd  index.qmd  jp_style.css  posts.qmd  projects.qmd  pyproject.toml  resources.qmd
.github/scripts/: latest_post.py
.github/workflows/: push_newest_blog.yml
_site/: about.html  cv.html  index.html  jp_style.css  listings.json  posts.html  projects.html  resources.html  search.json
posts/: _metadata.yml
posts/2021-04-30-grad-student-exit-surveys/: exit_data.csv  index.qmd
posts/2021-04-30-twitter-conference-presentation/: index.qmd
posts/2021-05-13-tidy-tuesday-coffee-ratings/: index.qmd
posts/2021-06-19-grad-student-exit-surveys/: index.qmd
posts/2022-06-02-prophet-model/: index.qmd
posts/2024-02-25-imbalanced-classification/: index.qmd
posts/2024-03-09-bayesian-networks-pt-1/: index.qmd
posts/2024-03-16-bayes-net-part2-estimation/: index.qmd
posts/2024-07-02-resume-cover-letter-typst/: index.qmd
posts/2024-07-09-bayes-net-introduction/: index.qmd
posts/2024-07-09-dplyr-datatable-python/: index.qmd
posts/2024-07-09-optimal-threshold/: index.qmd
posts/2024-07-10-bayes-net-part2-estimation/: index.qmd  simple_bayes_net.stan
posts/2024-11-03-bayes-net-stan-us-coffee-tasting/: index.qmd
posts/2024-11-03-bayes-net-us-coffee-tasting/: index.qmd
posts/2024-11-04-closeread-temp-blanket/: index.qmd
posts/2024-11-06-coverletter_resume_extensions/: index.qmd
posts/2024-11-08-bayes-net-loan-approval/: index.qmd
posts/2024-11-11-bayes-net-bnlearn-us-coffee-tasting/: index.qmd
(+138 files in other folders)
