[project]
name = "jonathanapedroza-com"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-flavor<0.8",
    "plotnine>=0.15.1",
    "pyhere>=1.0.3",
    "pyjanitor>=0.32.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
