[project]
name = "jonathanapedroza-com"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arviz>=1.0.0",
    "arviz-base>=1.0.0",
    "arviz-plots[matplotlib,plotly]>=1.0.0",
    "arviz-stats[xarray]>=1.0.0",
    "cmdstanpy>=1.3.0",
    "darts[all]>=0.42.1",
    "great-tables>=0.21.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotnine>=0.15.3",
    "polars>=1.39.3",
    "pyhere>=1.0.3",
    "pyjanitor>=0.32.20",
    "pymc>=5.28.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "skore>=0.14.0",
    "statsmodels>=0.14.6",
    "ucimlrepo>=0.0.7",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
